saving user history

--- a/localization/de.json
+++ b/localization/de.json
@@ -10,7 +10,7 @@
     "unlockPrice": "Freischalten für {{price}}€",
     "unlock": "✅ Freischalten",
     "returnToTitle": "Zurück zum Titel",
-    "back": "⬅️ Zurück",
+    "back": "Zurück",
     "selectStory": "Wähle eine Geschichte"
   },
   "home": "🏠 Startseite",
