--- a/localization/en.json
+++ b/localization/en.json
@@ -10,7 +10,7 @@
     "unlockPrice": "Unlock for {{price}}",
     "unlock": "✅ Unlock",
     "returnToTitle": "Return to Title",
-    "back": "⬅️ Go Back",
+    "back": "Go Back",
     "selectStory": "Select Story"
   },
   "home": "🏠 Home",
