--- a/localization/es.json
+++ b/localization/es.json
@@ -11,7 +11,7 @@
     "unlockPrice": "Desbloquear por {{price}}",
     "unlock": "✅ Desbloquear",
     "returnToTitle": "Regresar al título",
-    "back": "⬅️ Volver",
+    "back": "Volver",
     "selectStory": "Selecciona una historia"
   },
   "home": "🏠 Inicio",
