--- a/localization/fr.json
+++ b/localization/fr.json
@@ -10,7 +10,7 @@
     "unlockPrice": "Débloquer pour {{price}}",
     "unlock": "✅ Débloquer",
     "returnToTitle": "Retourner au titre",
-    "back": "⬅️ Retour",
+    "back": "Retour",
     "selectStory": "Choisissez une histoire"
   },
   "home": "🏠 Accueil",
