--- a/localization/is.json
+++ b/localization/is.json
@@ -10,7 +10,7 @@
     "unlockPrice": "Opna fyrir {{price}}",
     "unlock": "✅ Opna",
     "returnToTitle": "Skila til baka á titil",
-    "back": "⬅️ Til baka",
+    "back": "Til baka",
     "selectStory": "Veldu sögu"
   },
   "home": "🏠 Heim",
