--- a/localization/jp.json
+++ b/localization/jp.json
@@ -10,7 +10,7 @@
     "unlockPrice": "{{price}}でロック解除",
     "unlock": "✅ でロック解除",
     "returnToTitle": "タイトルに戻る",
-    "back": "⬅️ 戻る（もどる)",
+    "back": "戻る（もどる)",
     "selectStory": "物語を選んでください"
   },
   "home": "🏠 ホーム",
