feat: Implement text visibility toggle and UI enhancements
-  This commit introduces a major new feature allowing users to long-press on the story text to hide it, revealing the background image more clearly. Tapping the screen  restores the text. This enhances the user experience by providing an unobstructed view of the story's artwork.

- To support this and improve the overall application polish, several other changes were made:

 - **Text Visibility:**
 - Long-pressing story text now fades it out, allowing users to see the background image.
 - Tapping the screen when the text is hidden will restore it.
 - An animated hint is provided on the first page of a story to teach users this new interaction.

- **UI & UX Enhancements:**
  - The hint for deleting story progress on the story list screen is now a more noticeable animated toast.
   - The main title on the title screen is now internationalized.
 - `GleamingButton` styles have been updated for better readability and a more polished look.
 - A `FallbackBlurView` component has been added to ensure visual consistency on platforms where blur effects are not supported.

**Internationalization:**
   - All new user-facing text has been added to the localization files.
**Project Structure:**
 - The `assets` directory is now ignored by git to avoid committing large binary files.

--- a/localization/de.json
+++ b/localization/de.json
@@ -1,6 +1,8 @@
 {
   "titleScreen": {
-    "mainTitle": "Die Geschichten von Covarnius",
+    "clearHint": "Lange drücken, um Story-Daten zu löschen",
+    "mainTitleTop": "Zwei",
+    "mainTitleBottom": "Wege",
     "start": "Reise beginnen",
     "continue": "🕹️ Weiter",
     "delete": "Löschen",
@@ -33,12 +35,14 @@
   "gameOver": "Spiel beendet!",
   "languageChangeWarning": "Wenn du die Sprache änderst, wirst du zum Startbildschirm zurückgebracht. Bist du sicher?",
   "storyList": {
+    "mainTitle": "Die Geschichten von Covarnius",
     "continueChapter": "Abenteuer fortsetzen",
     "sampleLimit": "🔓 Nur Vorschau ({{count}} Auswahlmöglichkeiten)",
     "deleteProgressTitle": "Fortschritt Löschen?",
     "deleteProgressBody": "Der Fortschritt für „{{title}}“ wird gelöscht. Bist du sicher?",
     "deleted": "Gelöscht",
-    "deletedMessage": "Fortschritt wurde erfolgreich gelöscht."
+    "deletedMessage": "Fortschritt wurde erfolgreich gelöscht.",
+    "deleteInstructions": "Lange auf die Karte drücken, um Story-Daten zu löschen."
   },
   "chapterMenu": {
     "selectChapter": "Kapitel Auswählen",
@@ -88,5 +92,9 @@
   },
   "error": {
     "storyLoadFailed": "Kann Geschichte nicht laden: {{message}}"
+  },
+  "hint": {
+    "longPressToReveal": "Lange drücken, um den Text auszublenden",
+    "tapToRestore": "Tippe auf den Bildschirm, um wiederherzustellen"
   }
 }
