--- a/localization/jp.json
+++ b/localization/jp.json
@@ -1,6 +1,9 @@
 {
   "titleScreen": {
-    "mainTitle": "コヴァーニアスの物語",
+    "clearHint": "長押ししてストーリーデータを削除",
+    "mainTitleTop": "二つ",
+    "mainTitleBottom": "の道",
+     
     "start": "新しい冒険を始める",
     "continue": "🕹️ 次へ",
     "delete": "削除",
@@ -33,12 +36,14 @@
   "gameOver": "ゲーム終了",
   "languageChangeWarning": "言語を変更すると、タイトル画面に戻ります。よろしいですか？",
   "storyList": {
+      "mainTitle": "コヴァーニアスの物語",
     "continueChapter": "冒険の続きを始める",
     "sampleLimit": "🔓 お試し版（{{count}}つの選択肢",
     "deleteProgressTitle": "進行状況を削除しますか？",
     "deleteProgressBody": "「{{title}}」の進行状況を削除します。よろしいですか？",
     "deleted": "削除しました",
-    "deletedMessage": "進行状況を正常に削除しました。"
+    "deletedMessage": "進行状況を正常に削除しました。",
+    "deleteInstructions": "カードを長押ししてストーリーデータを消去します。",
   },
   "chapterMenu": {
     "selectChapter": "チャプター選択",
@@ -89,5 +94,10 @@
   },
   "error": {
     "storyLoadFailed": "ストーリーをロードできません: {{message}}"
+  },
+  "hint": {
+    "longPressToReveal": "長押しでテキストを非表示",
+
+    "tapToRestore": "画面をタップして元に戻す"
   }
 }
